clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__acc2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/ieee__acc2.c" (c, x86_64-unknown-linux-gnu)
global __const.main.values : double[4] = ConstArray { ty: Array { element_type: Double, size: 4 }, elts: Array([CirFloat { ty: Double, value: "1.7976931348623157E+308" }, CirFloat { ty: Double, value: "2.000000e+00" }, CirFloat { ty: Double, value: "5.000000e-01" }, CirFloat { ty: Double, value: "1.000000e+00" }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]

fn func(%arg0: double*) -> double [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: double*):
        %12 = alloca double*, "array", align 8
        %13 = alloca double, "__retval", align 8
        %14 = alloca double, "d", align 8
        store %arg0, %12
        %15 = load %12 : double*, align 8
        %16 = load %15 : double, align 8
        store %16, %14, align 8
        scope {
                %18 = load %14 : double, align 8
                %19 = const 1.000000e+00 : double
                cmp
                if %20 {
                        %28 = load %14 : double, align 8
                        store %28, %13
                        %29 = load %13 : double
                        return %29
                } else {
                        %21 = load %14 : double, align 8
                        %22 = load %12 : double*, align 8
                        %23 = const 1 : s32i
                        ptr_stride
                        %25 = call @func(%24) : double [all]
                        fmul
                        store %26, %13
                        %27 = load %13 : double
                        return %27
                }
                yield
        }
        %17 = load %13 : double
        return %17
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca double[4], "values", align 16
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.values : double[4]*
        copy
        scope {
                %7 = cast(array_to_ptrdecay) %1 : double*
                %8 = call @func(%7) : double [all]
                %9 = const 1.7976931348623157E+308 : double
                cmp
                if %10 {
                        %11 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %4 = get_global @exit : (s32i) -> void*
        %5 = const 0 : s32i
        call @exit(%5) [all]
        %6 = load %0 : s32i
        return %6
}
