clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__cdivchkld.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/ieee__cdivchkld.c" (c, x86_64-unknown-linux-gnu)
fn __divxc3(%arg0: long_double<f80>, %arg1: long_double<f80>, %arg2: long_double<f80>, %arg3: long_double<f80>) -> complex<long_double<f80>> [external, c];
fn ilogbl(%arg0: long_double<f80>) -> s32i [external, c, nothrow];
fn match(%arg2: complex<long_double<f80>>*, %arg3: complex<long_double<f80>>*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: complex<long_double<f80>>*, %arg3: complex<long_double<f80>>*):
        %157 = load %arg3 : complex<long_double<f80>>
        %158 = load %arg2 : complex<long_double<f80>>
        %159 = alloca complex<long_double<f80>>, "c", align 16
        %160 = alloca complex<long_double<f80>>, "z", align 16
        %161 = alloca s32i, "__retval", align 4
        %162 = alloca long_double<f80>, "rz", align 16
        %163 = alloca long_double<f80>, "iz", align 16
        %164 = alloca long_double<f80>, "rc", align 16
        %165 = alloca long_double<f80>, "ic", align 16
        %166 = alloca long_double<f80>, "rerr", align 16
        %167 = alloca long_double<f80>, "ierr", align 16
        %168 = alloca long_double<f80>, "rmax", align 16
        %169 = alloca s32i, "biterr", align 4
        store %158, %159
        store %157, %160
        %170 = load %160 : complex<long_double<f80>>, align 16
        %171 = complex.real %170 : long_double<f80>
        store %171, %162, align 16
        %172 = load %160 : complex<long_double<f80>>, align 16
        %173 = complex.imag %172 : long_double<f80>
        store %173, %163, align 16
        %174 = load %159 : complex<long_double<f80>>, align 16
        %175 = complex.real %174 : long_double<f80>
        store %175, %164, align 16
        %176 = load %159 : complex<long_double<f80>>, align 16
        %177 = complex.imag %176 : long_double<f80>
        store %177, %165, align 16
        scope {
            %225 = load %162 : long_double<f80>, align 16
            %226 = fabs %225 : long_double<f80>
            %227 = const 3.36210314311209350626E-4932 : long_double<f80>
            %228 = cmp gt %226, %227 : bool
            if %228 {
                %242 = load %162 : long_double<f80>, align 16
                %243 = load %164 : long_double<f80>, align 16
                %244 = fsub %242, %243 : long_double<f80>
                %245 = fabs %244 : long_double<f80>
                %246 = load %162 : long_double<f80>, align 16
                %247 = fabs %246 : long_double<f80>
                %248 = fdiv %245, %247 : long_double<f80>
                store %248, %166, align 16
                yield
            } else {
                scope {
                    %229 = load %162 : long_double<f80>, align 16
                    %230 = fabs %229 : long_double<f80>
                    %231 = const 0.000000e+00 : double
                    %232 = cast(floating) %231 : long_double<f80>
                    %233 = cmp eq %230, %232 : bool
                    if %233 {
                        %240 = load %164 : long_double<f80>, align 16
                        %241 = fabs %240 : long_double<f80>
                        store %241, %166, align 16
                        yield
                    } else {
                        %234 = load %162 : long_double<f80>, align 16
                        %235 = load %164 : long_double<f80>, align 16
                        %236 = fsub %234, %235 : long_double<f80>
                        %237 = fabs %236 : long_double<f80>
                        %238 = const 3.36210314311209350626E-4932 : long_double<f80>
                        %239 = fdiv %237, %238 : long_double<f80>
                        store %239, %166, align 16
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        scope {
            %201 = load %163 : long_double<f80>, align 16
            %202 = fabs %201 : long_double<f80>
            %203 = const 3.36210314311209350626E-4932 : long_double<f80>
            %204 = cmp gt %202, %203 : bool
            if %204 {
                %218 = load %163 : long_double<f80>, align 16
                %219 = load %165 : long_double<f80>, align 16
                %220 = fsub %218, %219 : long_double<f80>
                %221 = fabs %220 : long_double<f80>
                %222 = load %163 : long_double<f80>, align 16
                %223 = fabs %222 : long_double<f80>
                %224 = fdiv %221, %223 : long_double<f80>
                store %224, %167, align 16
                yield
            } else {
                scope {
                    %205 = load %163 : long_double<f80>, align 16
                    %206 = fabs %205 : long_double<f80>
                    %207 = const 0.000000e+00 : double
                    %208 = cast(floating) %207 : long_double<f80>
                    %209 = cmp eq %206, %208 : bool
                    if %209 {
                        %216 = load %165 : long_double<f80>, align 16
                        %217 = fabs %216 : long_double<f80>
                        store %217, %167, align 16
                        yield
                    } else {
                        %210 = load %163 : long_double<f80>, align 16
                        %211 = load %165 : long_double<f80>, align 16
                        %212 = fsub %210, %211 : long_double<f80>
                        %213 = fabs %212 : long_double<f80>
                        %214 = const 3.36210314311209350626E-4932 : long_double<f80>
                        %215 = fdiv %213, %214 : long_double<f80>
                        store %215, %167, align 16
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %178 = load %166 : long_double<f80>, align 16
        %179 = load %167 : long_double<f80>, align 16
        %180 = fmaxnum %178, %179 : long_double<f80>
        store %180, %168, align 16
        %181 = const 0 : s32i
        store %181, %169, align 4
        scope {
            %190 = load %168 : long_double<f80>, align 16
            %191 = const 0.000000e+00 : double
            %192 = cast(floating) %191 : long_double<f80>
            %193 = cmp ne %190, %192 : bool
            if %193 {
                %194 = get_global @ilogbl : ((long_double<f80>) -> s32i)*
                %195 = load %168 : long_double<f80>, align 16
                %196 = call @ilogbl(%195) : s32i [all]
                %197 = const 64 : s32i
                %198 = add %196, %197 : s32i [nsw]
                %199 = const 1 : s32i
                %200 = add %198, %199 : s32i [nsw]
                store %200, %169, align 4
                yield
            }
            yield
        }
        scope {
            %183 = load %169 : s32i, align 4
            %184 = const 6 : s32i
            %185 = cmp ge %183, %184 : bool
            if %185 {
                %188 = const 0 : s32i
                store %188, %161
                %189 = load %161 : s32i
                return %189
            } else {
                %186 = const 1 : s32i
                store %186, %161
                %187 = load %161 : s32i
                return %187
            }
            yield
        }
        %182 = load %161 : s32i
        return %182
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca complex<long_double<f80>>, "a", align 16
        %4 = alloca complex<long_double<f80>>, "b", align 16
        %5 = alloca complex<long_double<f80>>, "c", align 16
        %6 = alloca complex<long_double<f80>>, "z", align 16
        %7 = alloca long_double<f80>[4], "xr", align 16
        %8 = alloca long_double<f80>[4], "xi", align 16
        %9 = alloca long_double<f80>[4], "yr", align 16
        %10 = alloca long_double<f80>[4], "yi", align 16
        %11 = alloca long_double<f80>[4], "zr", align 16
        %12 = alloca long_double<f80>[4], "zi", align 16
        %13 = alloca long_double<f80>, "cr", align 16
        %14 = alloca long_double<f80>, "ci", align 16
        %15 = alloca s32i, "i", align 4
        %16 = alloca s32i, "ok", align 4
        store %arg0, %0
        store %arg1, %1
        %17 = const 0 : s32i
        store %17, %2
        %18 = const 1 : s32i
        store %18, %16, align 4
        %19 = const -1.80284204551487856924E-2552 : long_double<f80>
        %20 = const 0 : s64i
        %21 = get_element %7[%20] : long_double<f80>*
        store %19, %21, align 16
        %22 = const 2.64370611144962632511E+4916 : long_double<f80>
        %23 = const 0 : s64i
        %24 = get_element %8[%23] : long_double<f80>*
        store %22, %24, align 16
        %25 = const -2.53736858833639415543E-4695 : long_double<f80>
        %26 = const 0 : s64i
        %27 = get_element %9[%26] : long_double<f80>*
        store %25, %27, align 16
        %28 = const -4.15224402656888868824E+262 : long_double<f80>
        %29 = const 0 : s64i
        %30 = get_element %10[%29] : long_double<f80>*
        store %28, %30, align 16
        %31 = const -6.3669333847755379659E+4653 : long_double<f80>
        %32 = const 0 : s64i
        %33 = get_element %11[%32] : long_double<f80>*
        store %31, %33, align 16
        %34 = const -3.89072912651265618456E-304 : long_double<f80>
        %35 = const 0 : s64i
        %36 = get_element %12[%35] : long_double<f80>*
        store %34, %36, align 16
        %37 = const 2.31199032499427573017E+4825 : long_double<f80>
        %38 = const 1 : s64i
        %39 = get_element %7[%38] : long_double<f80>*
        store %37, %39, align 16
        %40 = const 5.02223035999083336654E-4286 : long_double<f80>
        %41 = const 1 : s64i
        %42 = get_element %8[%41] : long_double<f80>*
        store %40, %42, align 16
        %43 = const 1.23459631818840338799E-4921 : long_double<f80>
        %44 = const 1 : s64i
        %45 = get_element %9[%44] : long_double<f80>*
        store %43, %45, align 16
        %46 = const -2.88043748281638274857E+105 : long_double<f80>
        %47 = const 1 : s64i
        %48 = get_element %10[%47] : long_double<f80>*
        store %46, %48, align 16
        %49 = const 3.44028231094461896128E-307 : long_double<f80>
        %50 = const 1 : s64i
        %51 = get_element %11[%50] : long_double<f80>*
        store %49, %51, align 16
        %52 = const 8.0265249247267088655E+4719 : long_double<f80>
        %53 = const 1 : s64i
        %54 = get_element %12[%53] : long_double<f80>*
        store %52, %54, align 16
        %55 = const -2.282752288459431994E+4812 : long_double<f80>
        %56 = const 2 : s64i
        %57 = get_element %7[%56] : long_double<f80>*
        store %55, %57, align 16
        %58 = const 1.49505288698142573183E-854 : long_double<f80>
        %59 = const 2 : s64i
        %60 = get_element %8[%59] : long_double<f80>*
        store %58, %60, align 16
        %61 = const -2270.85721751211820685 : long_double<f80>
        %62 = const 2 : s64i
        %63 = get_element %9[%62] : long_double<f80>*
        store %61, %63, align 16
        %64 = const 4.47288407618369521217E-4932 : long_double<f80>
        %65 = const 2 : s64i
        %66 = get_element %10[%65] : long_double<f80>*
        store %64, %66, align 16
        %67 = const 1.00523814128672768937E+4809 : long_double<f80>
        %68 = const 2 : s64i
        %69 = get_element %11[%68] : long_double<f80>*
        store %67, %69, align 16
        %70 = const 1.98000721501104493297E-126 : long_double<f80>
        %71 = const 2 : s64i
        %72 = get_element %12[%71] : long_double<f80>*
        store %70, %72, align 16
        %73 = const 1.07363508404356840197E-1185 : long_double<f80>
        %74 = const 3 : s64i
        %75 = get_element %7[%74] : long_double<f80>*
        store %73, %75, align 16
        %76 = const -4.27982174853080997604E+4696 : long_double<f80>
        %77 = const 3 : s64i
        %78 = get_element %8[%77] : long_double<f80>*
        store %76, %78, align 16
        %79 = const 1.32092738562856559194E-4919 : long_double<f80>
        %80 = const 3 : s64i
        %81 = get_element %9[%80] : long_double<f80>*
        store %79, %81, align 16
        %82 = const -3.1506997743185376413E+24 : long_double<f80>
        %83 = const 3 : s64i
        %84 = get_element %10[%83] : long_double<f80>*
        store %82, %84, align 16
        %85 = const 1.35837180788083473681E+4672 : long_double<f80>
        %86 = const 3 : s64i
        %87 = get_element %11[%86] : long_double<f80>*
        store %85, %87, align 16
        %88 = const -5.69495873748767192994E-272 : long_double<f80>
        %89 = const 3 : s64i
        %90 = get_element %12[%89] : long_double<f80>*
        store %88, %90, align 16
        scope {
            %98 = const 0 : s32i
            store %98, %15, align 4
            for cond: {
                %154 = load %15 : s32i, align 4
                %155 = const 4 : s32i
                %156 = cmp lt %154, %155 : bool
                condition %156
            } step: {
                %99 = load %15 : s32i, align 4
                %100 = inc %99 : s32i [nsw]
                store %100, %15, align 4
                yield
            } do {
                scope {
                    %101 = load %15 : s32i, align 4
                    %102 = cast(integral) %101 : s64i
                    %103 = get_element %7[%102] : long_double<f80>*
                    %104 = load %103 : long_double<f80>, align 16
                    %105 = complex.real_ptr %3 : long_double<f80>*
                    store %104, %105, align 16
                    %106 = load %15 : s32i, align 4
                    %107 = cast(integral) %106 : s64i
                    %108 = get_element %8[%107] : long_double<f80>*
                    %109 = load %108 : long_double<f80>, align 16
                    %110 = complex.imag_ptr %3 : long_double<f80>*
                    store %109, %110, align 16
                    %111 = load %15 : s32i, align 4
                    %112 = cast(integral) %111 : s64i
                    %113 = get_element %9[%112] : long_double<f80>*
                    %114 = load %113 : long_double<f80>, align 16
                    %115 = complex.real_ptr %4 : long_double<f80>*
                    store %114, %115, align 16
                    %116 = load %15 : s32i, align 4
                    %117 = cast(integral) %116 : s64i
                    %118 = get_element %10[%117] : long_double<f80>*
                    %119 = load %118 : long_double<f80>, align 16
                    %120 = complex.imag_ptr %4 : long_double<f80>*
                    store %119, %120, align 16
                    %121 = load %15 : s32i, align 4
                    %122 = cast(integral) %121 : s64i
                    %123 = get_element %11[%122] : long_double<f80>*
                    %124 = load %123 : long_double<f80>, align 16
                    %125 = complex.real_ptr %6 : long_double<f80>*
                    store %124, %125, align 16
                    %126 = load %15 : s32i, align 4
                    %127 = cast(integral) %126 : s64i
                    %128 = get_element %12[%127] : long_double<f80>*
                    %129 = load %128 : long_double<f80>, align 16
                    %130 = complex.imag_ptr %6 : long_double<f80>*
                    store %129, %130, align 16
                    %131 = load %3 : complex<long_double<f80>>, align 16
                    %132 = load %4 : complex<long_double<f80>>, align 16
                    %133 = complex.real %131 : long_double<f80>
                    %134 = complex.imag %131 : long_double<f80>
                    %135 = complex.real %132 : long_double<f80>
                    %136 = complex.imag %132 : long_double<f80>
                    %137 = call @__divxc3(%133, %134, %135, %136) : complex<long_double<f80>> [all]
                    store %137, %5, align 16
                    %138 = load %5 : complex<long_double<f80>>, align 16
                    %139 = complex.real %138 : long_double<f80>
                    store %139, %13, align 16
                    %140 = load %5 : complex<long_double<f80>>, align 16
                    %141 = complex.imag %140 : long_double<f80>
                    store %141, %14, align 16
                    scope {
                        %142 = alloca complex<long_double<f80>>, "coerce", align 16
                        %143 = alloca complex<long_double<f80>>, "coerce", align 16
                        %144 = load %5 : complex<long_double<f80>>, align 16
                        %145 = load %6 : complex<long_double<f80>>, align 16
                        store %144, %142, align 16
                        %146 = load %142 : complex<long_double<f80>>, align 16
                        store %145, %143, align 16
                        %147 = load %143 : complex<long_double<f80>>, align 16
                        %148 = alloca complex<long_double<f80>>, "byval", align 16
                        store %146, %148
                        %149 = alloca complex<long_double<f80>>, "byval", align 16
                        store %147, %149
                        %150 = call @match(%148, %149) : s32i [all]
                        %151 = cast(int_to_bool) %150 : bool
                        %152 = not %151 : bool
                        if %152 {
                            %153 = const 0 : s32i
                            store %153, %16, align 4
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        scope {
            %94 = load %16 : s32i, align 4
            %95 = cast(int_to_bool) %94 : bool
            %96 = not %95 : bool
            if %96 {
                %97 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %91 = get_global @exit : ((s32i) -> void)*
        %92 = const 0 : s32i
        call @exit(%92) [all]
        %93 = load %2 : s32i
        return %93
}
